--- a/.github/workflows/fetcher.yml
+++ b/.github/workflows/fetcher.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-          cache: 'pipenv'
+          cache: 'pip'
+      - name: Install pipenv
+        run: pip install --user pipenv
       - name: Install Python dependencies
         run: |
           pipenv install
